# glimpr

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-Hant.md  pubspec.yaml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html
lib/: channels.dart  debug_log.dart  main.dart  platform_gate.dart
lib/capture/: capture_bridge.dart  capture_kind.dart  captured_display.dart  direct_capture.dart  element_snap.dart  last_region.dart
lib/editor/: color_info.dart  color_math.dart  composite.dart  curve.dart  decorate_bridge.dart  decoration.dart  document.dart  draw_style.dart  drawable.dart  drawable_painter.dart  editor_controller.dart  editor_core.dart  editor_host.dart  encode_bridge.dart  font_bridge.dart  geometry.dart  hdr_plan.dart  hit_test.dart  hud_config.dart  loupe_config.dart  raster.dart  spotlight.dart  text_metrics.dart  tool_meta.dart  tool_style_store.dart  viewport.dart
lib/gif_editor/: burn_in.dart  document_transform.dart  export_service.dart  frame_store.dart  gif_document.dart  gif_editor_app.dart  gif_editor_controller.dart  gif_import.dart  motion.dart  transform.dart
lib/image_editor/: checkerboard.dart  gallery_layout.dart  image_editor_app.dart  image_editor_export.dart  image_editor_host.dart  image_editor_spike.dart  recent_images.dart  thumb_cache.dart
lib/imaging/: crop.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/output/: clipboard.dart  deliver.dart  filename.dart  flow.dart  name_tokens.dart  output_naming.dart  saver.dart  sounds.dart
lib/overlay/: crop_hud.dart  editor_canvas.dart  export.dart  (+14 more)
test/: widget_test.dart
tool/: coverage_report.dart  gif_encode_bench.dart
windows/: CMakeLists.txt
windows/test/: CMakeLists.txt  record_worker_e2e.ps1  test_main.cpp
(+277 files in other folders)
